# newsletter

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yaml
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
