[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
config = "0.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.39"
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "uuid",
    "postgres",
    "macros",
    "migrate",
    "chrono"
]

[dev-dependencies]
reqwest = "0.11"
